# gcoordinator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  test.gcode  test.py
docs/: conf.py  gcoordinator.rst  index.rst  installation.rst  modules.rst  release_notes.rst  requirements.txt  tutorial.rst
docs/locale/ja/LC_MESSAGES/: gcoordinator.po  index.po  installation.po  release_notes.po  tutorials.po
docs/tutorials/: pre_start_readings.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  tutorial_5.rst  tutorial_6.rst
gcoordinator/: __init__.py  default_settings.json  extrusion_calculator.py  gcode_generator.py  gui_export.py  infill_generator.py  machine_settings.json  path_generator.py  path_transformer.py  plot_3d.py  preview.py  print_settings.py  settings.py
gcoordinator/kinematics/: kin_base.py  kin_bed_rotate.py  kin_bed_tilt_bc.py  kin_cartesian.py  kin_nozzle_tilt.py
gcoordinator/settings/: base_settings.json  settings.pickle
gcoordinator/utils/: coords.py
sample_settings/: settings.json
tests/: default_settings.json  infill_test.py  multi_axis_test.py  test.gcode  test.py  test_path_list.py
