[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcoordinator"
version = "0.0.9"
authors = [
  { name="Tomohiro TANIGUCHI", email="gcoordinator.3dp@gmail.com" },
]
description = "a package for generate G-code for 3D Printer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pyqtgraph==0.13.2", "pyopengl", "pyqt5", "matplotlib==3.7.1"]




[project.urls]
"Homepage" = "https://github.com/tomohiron907/gcoordinator"
