[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcoordinator"
version = "0.0.20"
authors = [
  { name = "Tomohiro TANIGUCHI", email = "gcoordinator.3dp@gmail.com" },
]
description = "a package for generate G-code for 3D Printer"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy==1.26.2",
  "contourpy>=1.1.0",
  "msgpack>=1.0.0",
]


[project.urls]
"Homepage" = "https://github.com/tomohiron907/gcoordinator"
"Documentation" = "https://gcoordinator.readthedocs.io/en/latest/index.html"
